Fix scrollbar appering in `Breadcrumbs` when overflow

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,14 @@
 .breadcrumbs>ul>ol:last-child {
   opacity: 1;
 }
+
+@layer utilities {
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scrollbar-none {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
